[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oads-download"
dynamic = ["version"]
authors = [{ name = "Leonard König", email = "koenig@tropos.de" }]
description = "A Python script to search and download EarthCARE data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "numpy",
    "pandas",
    "beautifulsoup4",
    "lxml",
    "tomli;python_version<'3.11'",
]

[project.urls]
"Homepage" = "https://github.com/koenigleon/oads-download"
"Bug Tracker" = "https://github.com/koenigleon/oads-download/issues"

[project.scripts]
oads-download = "oads_download:main_cli"

[tool.setuptools]
py-modules = ["oads_download"]

[tool.setuptools.dynamic]
version = { attr = "oads_download.__version__" }
